--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        google()
         maven {
             url "https://jitpack.io"
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.github.dcendents:android-maven-plugin:1.2'
 
         // NOTE: Do not place your application dependencies here; they belong
